--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "core-js": "^3.6.5",
     "element-plus": "^2.2.14",
     "vue": "^3.0.0",
