--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "element-plus": "^2.2.14",
+    "lodash": "^4.17.21",
     "vue": "^3.0.0",
     "vue-router": "^4.1.4",
     "vuex": "^4.0.2"
