--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "core-js": "^3.6.5",
     "element-plus": "^2.2.14",
     "lodash": "^4.17.21",
-    "qrcodejs2": "^0.0.2",
     "qs": "^6.11.0",
     "vue": "^3.0.0",
     "vue-qr": "^4.0.9",
+    "qrcodejs2": "^0.0.2",
     "vue-router": "^4.1.4",
     "vuex": "^4.0.2"
   },
@@ -41,9 +41,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {
-      "no-unused-vars": "off"
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
