--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "element-plus": "^2.2.14",
+    "jquery": "^3.6.1",
     "lodash": "^4.17.21",
     "qrcodejs2": "^0.0.2",
     "qs": "^6.11.0",
+    "svg-pan-zoom": "^3.6.1",
     "vue": "^3.0.0",
+    "vue-amap": "^0.5.10",
     "vue-qr": "^4.0.9",
     "vue-router": "^4.1.4",
+    "vue-svg-pan-zoom": "^2.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
@@ -27,7 +31,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
@@ -42,7 +47,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "no-redeclare": 0
     }
   },
   "browserslist": [
